k8s/hmg/service.yml
apiVersion: v1
kind: Service
metadata:
  name: box-boilerplate-service
  namespace: cire-box
  labels:
    name: box-boilerplate-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: box-boilerplate
